--- a/src/app/layout/systems/functions/functions.component.html
+++ b/src/app/layout/systems/functions/functions.component.html
@@ -16,9 +16,9 @@
       </div>
     
     </p-header>
-    <p-treeTable *ngIf="items" [value]="items" selectionMode="multiple" [(selection)]="selectedItems"
+    <p-treeTable *ngIf="items" [value]="items" selectionMode="checkbox" [(selection)]="selectedItems"
       [metaKeySelection]="true" (onNodeSelect)="nodeSelect($event)" (onNodeUnselect)="nodeUnSelect($event)"
-      [scrollable]="true">
+      [scrollable]="true" dataKey="name" >
       <ng-template pTemplate="header">
         <tr>
           <th style="width: 10%;">
