add comment management and statistic management

--- a/src/app/layout/contents/categories/categories-detail/categories-detail.component.html
+++ b/src/app/layout/contents/categories/categories-detail/categories-detail.component.html
@@ -55,7 +55,8 @@
                         <input type="number" pInputText formControlName="sortOrder">
                     </div>
                     <div class="ui-grid-col-4">
-
+                        <app-validation-message [entityForm]="entityForm" fieldName="sortOrder"
+                            [validationMessages]="validation_messages"></app-validation-message>
                     </div>
                 </div>
 
@@ -65,11 +66,11 @@
                     </div>
                     <div class="ui-grid-col-6">
                         <p-dropdown [options]="categories" [style]="{'width':'100%'}" placeholder="Chọn danh mục"
-                            optionLabel="name" filter="true" [showClear]="true" formControlName="parentId">
+                            filter="true" [showClear]="true" formControlName="parentId">
                         </p-dropdown>
                     </div>
                     <div class="ui-grid-col-4">
-                      
+
                     </div>
                 </div>
             </div>
