--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -2,51 +2,22 @@
     <h2 class="text-muted">Dashboard <small>Statistics Overview</small></h2>
     <div class="row">
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'primary'" [count]="26" [icon]="'fa-comments'" [label]="'New Comments!'"></app-stat>
+            <app-stat [bgClass]="'primary'" [count]="totalComment | number" [icon]="'fa-comments'" [label]="'Bình luận!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'warning'" [count]="12" [icon]="'fa-tasks'" [label]="'New task!'"></app-stat>
+            <app-stat [bgClass]="'warning'" [count]="totalKbs | number" [icon]="'fa-tasks'" [label]="'Bài viết mới!'"></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
             <app-stat
                 [bgClass]="'success'"
-                [count]="124"
+                [count]="totalReport | number"
                 [icon]="'fa-shopping-cart'"
-                [label]="'New Orders!'"
+                [label]="'Báo xấu!'"
             ></app-stat>
         </div>
         <div class="col-xl-3 col-lg-6">
-            <app-stat [bgClass]="'danger'" [count]="13" [icon]="'fa-support'" [label]="'New Tickets!'"></app-stat>
+            <app-stat [bgClass]="'danger'" [count]="totalMember | number" [icon]="'fa-support'" [label]="'Thành viên!'"></app-stat>
         </div>
     </div>
     <hr />
-    <ngb-alert (close)="closeAlert(alert)" *ngFor="let alert of alerts" [type]="alert.type">{{
-        alert.message
-    }}</ngb-alert>
-    <hr />
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="card card-default">
-                <div class="card-header"><i class="fa fa-clock-o fa-fw"></i> Responsive Timeline</div>
-                <!-- /.card-header -->
-                <app-timeline></app-timeline>
-                <!-- /.card-body -->
-            </div>
-            <!-- /.card -->
-        </div>
-        <!-- /.col-lg-8 -->
-        <div class="col-lg-4">
-            <div class="card card-default mb-3">
-                <div class="card-header"><i class="fa fa-bell fa-fw"></i> Notifications card</div>
-                <!-- /.card-header -->
-                <app-notification></app-notification>
-                <!-- /.card-body -->
-            </div>
-            <!-- /.card -->
-
-            <app-chat></app-chat>
-            <!-- /.card .chat-card -->
-        </div>
-        <!-- /.col-lg-4 -->
-    </div>
 </div>
