--- a/src/app/layout/contents/knowledge-bases/knowledge-bases-approved/knowledge-bases-approved.component.html
+++ b/src/app/layout/contents/knowledge-bases/knowledge-bases-approved/knowledge-bases-approved.component.html
@@ -3,7 +3,7 @@
     <p-panel #pnl>
         <p-header>
             <div class="ui-g-6">
-                    <button appPermission appFunction="CONTENT_KNOWLEDGEBASE" appAction="UPDATE" pButton type="button"
+                    <button appPermission appFunction="CONTENT_KNOWLEDGEBASE" appAction="APPROVE" pButton type="button"
                     label="Approved" icon="fa fa-book" class="ui-button-primary"
                     (click)="Approved()"></button>
             </div>
