--- a/src/app/layout/contents/knowledge-bases/knowledge-bases.component.html
+++ b/src/app/layout/contents/knowledge-bases/knowledge-bases.component.html
@@ -3,6 +3,8 @@
     <p-panel #pnl>
         <p-header>
             <div class="ui-g-6">
+                <!-- <button appPermission appFunction="CONTENT_KNOWLEDGEBASE" appAction="CREATE" pButton type="button"
+                    label="Chi tiết" icon="fa fa-eye" (click)="ViewDetail()"></button> -->
                 <button appPermission appFunction="CONTENT_KNOWLEDGEBASE" appAction="CREATE" pButton type="button"
                     label="Thêm" icon="fa fa-plus" (click)="showAddModal()"></button>
                 <button appPermission appFunction="CONTENT_KNOWLEDGEBASE" appAction="DELETE" pButton type="button"
